[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = ""
authors = ["anselbrandt <ansel@anselbrandt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
ipykernel = "^6.27.1"
python-dotenv = "^1.0.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
